samples/_failures_safe/1761491364_5ab746_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fec77781.c: In function ‘main’:
./samples/SAFE/__tmp_fec77781.c:168:5: error: expected declaration or statement at end of input
  168 |     return 0;
      |     ^~~~~~
